[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "molstar-mcp"
version = "0.1.0"
description = "MCP server that lets Claude Desktop drive a Mol* 3D protein viewer"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27",
    "websockets>=16.0",
    "molviewspec>=1.8",
]

[project.scripts]
molstar-mcp = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
